[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
serde_json = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
